crates/java-syntax/tests/snapshots/lexer_snapshots__lex_unicode_escape_in_string_backslash_quote.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
String s = "\u005C\u0022";
TOKENS:
IDENTIFIER "String"
WHITESPACE " "
IDENTIFIER "s"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
STRING_LITERAL "\"\\u005C\\u0022\""
SEMICOLON ";"

LEX_ERRORS:
<none>
