crates/java-syntax/tests/snapshots/lexer_snapshots__lex_unicode_escape_multiple_u.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
char \uuuu0061 = 'a';
TOKENS:
CHAR_KW "char"
WHITESPACE " "
IDENTIFIER "\\uuuu0061"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
CHAR_LITERAL "'a'"
SEMICOLON ";"

LEX_ERRORS:
<none>
