crates/java-syntax/tests/snapshots/lexer_snapshots__lex_utf_surrogates.snap
---
source: crates/java-syntax/tests/lexer_snapshots.rs
expression: out
---
SOURCE:
\uD83C\uDF51

TOKENS:
UNKNOWN "\\uD83C\\uDF51"
WHITESPACE "\n"

LEX_ERRORS:
LexicalError { kind: UnexpectedChar('🍑'), range: 0..12 }
